# cppmatrix

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.vcxproj  Matrix.vcxproj.filters  MatrixMisc.cpp  MatrixMisc.h  README.md  compile.sh  fixed_results.txt  gauss_seidel.py  jacobi.py  main.cpp  main.py  py_matrix.pyi  results.txt  test  test.py
cuda/: cuda.cu  cuda.h  cudaOps.cu  cudaOps.h
inc/: Matrix.h  MatrixMisc.h  MatrixStructs.h
python/: common.py  direct.py  gauss_seidel.py  jacobi.py
src/: Matrix.cpp  main.cpp  py_matrix.cpp
test/: advanced_operations.cc  basic_operators.cc  core_features.cc
tests/: CMakeLists.txt  advanced_operations.cc
tex/: tex.fdb_latexmk  tex.fls  tex.tex
